Updated the tests

--- a/com.drools.test.kie.file.system/pom.xml
+++ b/com.drools.test.kie.file.system/pom.xml
@@ -14,6 +14,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.12</junit.version>
 		<org.jboss.drools.version>6.5.0.Final</org.jboss.drools.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
